k8s/2-postgresdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  type: ClusterIP
  selector:
    app: postgres-pod
  ports:
   - port: 5432
     targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pod
  template:
    metadata:
      labels:
        app: postgres-pod
    spec:
     containers:
        - name: postgres
          image: "postgres:14-alpine"
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
     volumes:
       - name: postgres-storage
         persistentVolumeClaim:
           claimName: postgres-pv-claim
