k8s/3-bookmarker-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmarker-api-svc
spec:
  type: NodePort
  selector:
    app: bookmarker-api-pod
  ports:
    - name: app-port-mapping
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30090

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmarker-api-deployment
  labels:
    app: bookmarker-api-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookmarker-api-pod
  template:
    metadata:
      labels:
        app: bookmarker-api-pod
    spec:
      containers:
      - name: bookmarker-api
        image: sreevani724/bookmarker-api-jib
        ports:
          - containerPort: 8080
